<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/novelero_bg">

    <!-- CONTENIDO CENTRAL -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <!-- LOGO (Imagen de Referencia) -->
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logosplash"
            android:contentDescription="@string/app_name"/>

        <!-- TITULO -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            android:layout_marginTop="28dp"/>

        <!-- SUB -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_slogan"
            android:textColor="@color/novelero_text_secondary"
            android:textSize="15sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <!-- FOOTER -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/splash_version"
        android:textColor="@color/novelero_muted"
        android:textSize="12sp"/>

</RelativeLayout>
